# atref

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  install.ps1  tauri.conf.json
.github/workflows/: ci.yml  excavator.yml  release.yml  winget-init.yml  winget-publish.yml
ai-docs/: agentic-gui-testing.md  icon-design.md  testable-architecture.md
assets/: icon-32.rgba
bucket/: atref.json
capabilities/: default.json
docs/: npm-name-appeal.md
examples/: drive.rs  uia_dump.rs
npm/: README.md  package.json
specs/: 001-windows-mvp.md  002-result-quality.md  003-picker-look-and-feel.md  004-launcher-look.md  005-persistent-index-frecency.md  006-config-hot-reload.md  007-agent-cli.md  008-packaging.md  009-match-highlighting.md  010-result-file-metrics.md  011-media-thumbnails.md
src/: cli.rs  config.rs  enrich.rs  frecency.rs  icon.rs  index.rs  lib.rs  main.rs  picker.rs  reference.rs  search.rs  store.rs  watch.rs  win32.rs
tests/: cli.rs  config_watch.rs  e2e.rs  enrich.rs  git_aware.rs  insert.rs  picker.rs  store.rs  watcher.rs
tests/common/: mod.rs
tools/: README.md  _common.ps1  icon-debug.ps1  measure-glyph.ps1  render-svg.ps1
ui/: index.html
