[package]
name = "atref"
version = "0.3.0"
edition = "2021"
description = "Global file-reference picker: press a chord in any text field, fuzzy-pick a file, and insert an @-quoted absolute path at the caret."
authors = ["Juan José Fuchs"]
license = "MIT"
repository = "https://github.com/juanjofuchs/atref"
homepage = "https://github.com/juanjofuchs/atref"
readme = "README.md"
keywords = ["cli", "fuzzy", "picker", "files", "productivity"]
categories = ["command-line-utilities"]

[dependencies]
arboard = "3.6.1"
directories = "6.0.0"
eframe = "0.33"
enigo = "0.6.1"
global-hotkey = "0.8"
ignore = "0.4"
notify = "8"
notify-debouncer-full = "0.7"
nucleo-matcher = "0.3.1"
rfd = "0.17.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tray-icon = "0.24"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell", "Win32_UI_Input_KeyboardAndMouse"] }

[dev-dependencies]
egui_kittest = { version = "0.33", features = ["wgpu", "snapshot"] }

# src/main.rs (binary) + src/lib.rs (testable core) are auto-detected.
